--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "classnames": "^2.2.6",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-family-tree": "^1.3.0",
     "react-scripts": "3.1.2"
   },
   "scripts": {
