--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "classnames": "^2.2.6",
+    "corejs": "^1.0.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-family-tree": "^1.3.0",
